[package]
name = "xtask-toolkit"
description = "A collection of useful tools for xtask building"
version = "0.1.12"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/dzordzu/xtask-toolkit"

[package.metadata.docs.rs]
all-features = true

[features]
cargo = ["dep:toml", "dep:serde"]
checksums = ["dep:sha2", "dep:ignore", "dep:walkdir"]
gh-cli = ["dep:serde", "dep:serde_json", "dep:regex", "dep:semver"]
git = ["dep:chrono"]
linux-utils = []
python-maturin = []
package-deb = ["dep:rustix", "linux-utils", "git", "cargo", "dep:serde"]
package-rpm = ["dep:rpm", "dep:rustix", "linux-utils", "git", "cargo", "dep:serde"]
git-precommit = ["dep:minijinja", "cargo", "git", "dep:serde"]
targz = ["dep:tar", "dep:flate2", "dep:walkdir", "dep:regex"]

[dependencies]
xshell = "0.2.7"
rpm = { version = "0.16.0", optional = true }
sha2 = { version = "0.10.8", optional = true }
flate2 = { version = "1.1.0", optional = true }
tar = { version = "0.4.44", optional = true }
chrono = { version = "0.4.39", optional = true }
rustix = { version = "1.0.7", optional = true, features = ["system"] }
toml = { version = "0.8.23", optional = true }
minijinja = { version = "2.10.2", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
regex = { version = "1.11.1", optional = true }
semver = { version = "1.0.26", optional = true }
thiserror = "2.0.12"
walkdir = { version = "2.5.0", optional = true }
ignore = { version = "0.4.23", optional = true }
